@@ -28,6 +28,7 @@ with this program; if not, write to the Free Software Foundation, Inc.,
 #define _MYSQL_RESULTSET_H_
 
 #include <boost/shared_ptr.hpp>
+#include <boost/weak_ptr.hpp>
 
 #include <cppconn/resultset.h>
 
@@ -50,7 +51,7 @@ class MySQL_ResultSet : public sql::ResultSet
 {
 	MYSQL_ROW				row;
 	boost::shared_ptr< NativeAPI::NativeResultsetWrapper > result;
-	boost::shared_ptr< NativeAPI::NativeConnectionWrapper > proxy;
+	boost::weak_ptr< NativeAPI::NativeConnectionWrapper > proxy;
 	unsigned int			num_fields;
 	uint64_t				num_rows;
 	uint64_t				row_position;
@@ -79,7 +80,7 @@ protected:
 	MYSQL_FIELD * getFieldMeta(unsigned int columnIndex) const;
 
 public:
-	MySQL_ResultSet(boost::shared_ptr< NativeAPI::NativeResultsetWrapper > res, boost::shared_ptr< NativeAPI::NativeConnectionWrapper > _proxy, sql::ResultSet::enum_type rset_type, MySQL_Statement * par,
+	MySQL_ResultSet(boost::shared_ptr< NativeAPI::NativeResultsetWrapper > res, boost::weak_ptr< NativeAPI::NativeConnectionWrapper > _proxy, sql::ResultSet::enum_type rset_type, MySQL_Statement * par,
 					boost::shared_ptr< MySQL_DebugLogger > & l);
 
 	virtual ~MySQL_ResultSet();
