@@ -55,6 +55,7 @@ public:
     TEST_CASE(expired_pwd);
     TEST_CASE(bug71606);
     TEST_CASE(bug72700);
+    TEST_CASE(bug66871);
   }
 
   /**
@@ -85,6 +86,8 @@ public:
   void bug71606();
 
   void bug72700();
+
+  void bug66871();
 
 };
 
